--- a/intex.html
+++ b/intex.html
@@ -25,14 +25,15 @@
             <li><a href="#">PROMOCIONES</a>
             <li><a href="#">TV and Home Theatre</a>
                 <ul class="subnav">
-                    <li class="card-med" id="sup-dog">
+                    <li class="card-med" id="">
                         <div class="card-image"><img src="tele.avif"></div>
                         <a href="#">
                             <span>Televisores</span>
                             
                         </a>
                     </li>
-                    <li class="card-med" id="sup-cat">
+                </li>
+                <li class="card-med" id="">
                         <div class="card-image"><img src="home theatre.avif"></div>
                         <a href="#">
                             <span>Home theatre</span>
