--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
 <header>
-    <div class="banner">Get free delivery on orders over $80</div>
+    <div class=""></div>
     <nav>
           
         <div id="logo">
