--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             
         </div>
         <ul class="navigation-menu">
-            <li><a href="#">PROMOCIONES</a>
+            <li><a href="#">PROMOCIONESssss</a>
             <li><a href="#">TV and Home Theatre</a>
                 <ul class="subnav">
                     <li class="card-med" id="">
